--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="la_div.json"></script>
-    <script src="crimes_2014.json"></script>
+    <script src="crimes_2014_1.3.json"></script>
     <script>
 var width = 700;
 var height = 580;
